[package]
name = "hello-wasm"
version = "1.0.0"
authors = ["yukinissie <bigtree2490@outlook.jp>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yukinissie/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"